--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "@clerk/clerk-react": "^5.60.0",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.5",
+    "canvas-confetti": "^1.9.3",
     "interview-battleground": "file:..",
     "lucide-react": "^0.563.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
+    "react-resizable-panels": "^3.0.6",
     "react-router": "^7.9.4",
     "tailwindcss": "^4.1.18"
   },
