--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.60.0",
-     "@monaco-editor/react": "^4.7.0",
+    "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.5",
     "canvas-confetti": "^1.9.3",
+    "data-fns": "^1.1.0",
     "interview-battleground": "file:..",
     "lucide-react": "^0.563.0",
     "react": "^19.1.1",
