--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.5",
+    "axios": "^1.13.6",
     "canvas-confetti": "^1.9.3",
     "date-fns": "^4.1.0",
     "interview-battleground": "file:..",
